优化加载界面的样式，调整HTML和CSS以改善用户体验

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+  style="overflow: hidden auto; background: var(--initial-loader-bg, #fff); min-block-size: calc(100% + env(safe-area-inset-top) + env(safe-area-inset-bottom));">
 
 <head>
   <meta http-equiv="pragma" content="no-cache">
@@ -31,7 +32,7 @@
   <link rel="stylesheet" type="text/css" href="/loader.css" />
 </head>
 
-<body>
+<body style="margin: 0;">
   <div id="loading-bg">
     <div class="loading-logo">
       <!-- Logo -->
