--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
       <div class="loading-logo">
         <!-- Logo -->
         <svg
+          width="10rem"
+          height="10rem"
           viewBox="0 0 192 192"
           version="1.1"
           xmlns="http://www.w3.org/2000/svg"
