feat: 更新主题颜色和背景色

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="referrer" content="never" />
     <meta name="msapplication-TileColor" content="#7D34FD" />
     <meta name="color-scheme" content="light dark" />
-    <meta name="theme-color" content="#28243D" media="(prefers-color-scheme: dark)" />
+    <meta name="theme-color" content="#0E1116" media="(prefers-color-scheme: dark)" />
     <meta name="theme-color" content="#F4F5FA" media="(prefers-color-scheme: light)" />
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
