优化离线状态管理逻辑

--- a/public/offline.html
+++ b/public/offline.html
@@ -137,7 +137,7 @@
     
     <div class="status-badge">
       <span class="status-dot"></span>
-      <span>离线模式</span>
+      <span>离线状态</span>
     </div>
   </div>
   
