调整 index.html 和默认布局样式，修改溢出属性以改善页面滚动体验

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN" style="
-    overflow: hidden;
+    overflow: hidden auto;
     min-block-size: 100vh;
     min-block-size: 100dvh;
     --safe-area-inset-bottom: env(safe-area-inset-bottom);
@@ -96,6 +96,13 @@
   <link rel="modulepreload" href="/src/main.ts" />
 
   <style>
+    #app {
+      block-size: 100%;
+      overflow: auto;
+      -webkit-overflow-scrolling: touch;
+      overscroll-behavior: contain;
+    }
+
     #loading-bg {
       position: fixed;
       z-index: 99999;
